--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,12 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0.0"
+version = "1.1.0"
 group= "com.sblectric.openharvest" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "openharvest"
 
@@ -22,9 +22,9 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 minecraft {
-    version = "1.9-12.16.1.1938-1.9.0"
+    version = "1.9.4-12.17.0.1976"
     runDir = "run"
-	mappings = "snapshot_20160312"
+    mappings = "snapshot_20160518"
 }
 
 dependencies {
